--- a/scss/theme/_home.scss
+++ b/scss/theme/_home.scss
@@ -22,9 +22,16 @@
 
 //------- Start Product Area --------//
 
-.title-bg {
-	background: $title-color;
+.welcome-title{
+  font-family: 'Montserrat';
+  font-weight: 600;
 }
+.welcome-text{
+  font-family: 'Montserrat';
+  color: black;
+}
+
+
 .product-area-title {
 	padding-bottom: 70px;
 	h2 {
@@ -36,9 +43,14 @@
 	}
 }
 .single-product {
+
+	-webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.42);
+	-moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.42);
+	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.42);
+
+	
 	margin-top: 30px;
 	background: $white;
-	border-bottom: 2px solid $primary-color;
 	padding: 70px 20px;
 	@include transition();
 	.icon {
@@ -46,7 +58,7 @@
 		margin-bottom: 20px;
 		span {
 			font-size: 48px;
-			color: $primary-color;
+			color: #00AEA5;
 			@include transition();
 		}
 	}
@@ -62,10 +74,14 @@
 		}
 	}
 	&:hover {
-		.icon span, .desc h4, .desc p {
+		.icon span, .desc h4, .desc p, .desc a {
 			color: $white;
 		}
-		background: $primary-color;
+		img {
+			filter: brightness(0) invert(1);
+		}
+		border-color: #fff;
+  	background-image: linear-gradient(to right, $primary-color, rgba($primary-color,.5));
 	}
 }
 
