--- a/scss/theme/_footer.scss
+++ b/scss/theme/_footer.scss
@@ -22,6 +22,7 @@ footer {
             justify-content: center;
 
             p {
+                color: $white;
                 margin-bottom: 0;
             }
 
