--- a/scss/theme/_variables.scss
+++ b/scss/theme/_variables.scss
@@ -1,16 +1,13 @@
 
 //    Font Family
 
-$primary-font	: 'Montserrat', sans-serif;
+$primary-font   : 'Montserrat', sans-serif;
 
 /*--------------------------- Color variations ----------------------*/
 
-$primary-color	: #00AEA5;
-$title-color	: #222222;
-$text-color		: #FFFFFF;
+$primary-color  : #00AEA5;
+$title-color    : #222222;
+$text-color     : #777777;
 $footer-bg      : #60605E;
-$white			: #FFFFFF;
-$black			: #000000;
-
-
-
+$white          : #FFFFFF;
+$black          : #000000;
