--- a/css/main.css
+++ b/css/main.css
@@ -603,6 +603,7 @@ td, th {
   .primary-btn:hover {
     background: #00AEA5;
     color: #FFFFFF;
+    -webkit-box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2);
     box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2); }
 
 .section-title {
@@ -696,6 +697,7 @@ td, th {
   .details-btn:hover {
     width: 140px;
     background: #00AEA5;
+    -webkit-box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2);
     box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2); }
     .details-btn:hover .details {
       margin-left: 0;
@@ -771,6 +773,8 @@ td, th {
 .is-sticky .sticky-header {
   background: -moz-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
   background: -webkit-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
+  background: -webkit-gradient(linear, left top, right top, from(rgba(60, 64, 143, 0.95)), to(rgba(91, 97, 207, 0.95)));
+  background: -o-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
   background: linear-gradient(to right, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%); }
 
 .search {
@@ -780,12 +784,16 @@ td, th {
   .search span {
     color: #FFFFFF; }
   .search:hover .search-field {
+    -webkit-transform: scaleY(1) !important;
+    -ms-transform: scaleY(1) !important;
     transform: scaleY(1) !important; }
   @media (max-width: 767px) {
     .search {
       margin-right: 60px; } }
 
 .search-field {
+  -webkit-transform: scaleY(0);
+  -ms-transform: scaleY(0);
   transform: scaleY(0);
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
@@ -795,6 +803,8 @@ td, th {
   top: -13px;
   right: -2px; }
   .search-field:hover {
+    -webkit-transform: scaleY(1) !important;
+    -ms-transform: scaleY(1) !important;
     transform: scaleY(1) !important; }
   .search-field input {
     line-height: 60px;
@@ -843,6 +853,8 @@ td, th {
   .banner-area .overlay-bg {
     background: -moz-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
     background: -webkit-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
+    background: -webkit-gradient(linear, left top, right top, from(rgba(60, 64, 143, 0.95)), to(rgba(91, 97, 207, 0.95)));
+    background: -o-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
     background: linear-gradient(to right, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%); }
 
 .signle-service {
@@ -919,6 +931,8 @@ td, th {
   .single-filter-content .overlay-bg-content {
     background: -moz-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
     background: -webkit-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
+    background: -webkit-gradient(linear, left top, right top, from(rgba(60, 64, 143, 0.95)), to(rgba(91, 97, 207, 0.95)));
+    background: -o-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
     background: linear-gradient(to right, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
     text-align: center;
     padding: 50px 100px;
@@ -963,6 +977,8 @@ td, th {
     .single-member .thumb .overlay-member {
       background: -moz-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
       background: -webkit-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
+      background: -webkit-gradient(linear, left top, right top, from(rgba(60, 64, 143, 0.95)), to(rgba(91, 97, 207, 0.95)));
+      background: -o-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
       background: linear-gradient(to right, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
       text-align: center;
       padding: 30px;
@@ -1114,6 +1130,7 @@ td, th {
   .single-input input:focus {
     outline: none;
     border: 1px solid transparent;
+    -webkit-box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2);
     box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2); }
 
 .single-input textarea {
@@ -1128,6 +1145,7 @@ td, th {
   .single-input textarea:focus {
     outline: none;
     border: 1px solid transparent;
+    -webkit-box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2);
     box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2); }
 
 .cta-area {
@@ -1194,7 +1212,11 @@ footer {
   footer .footer-container .footer-description,
   footer .footer-container .footer-links,
   footer .footer-container .footer-icon {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center; }
     footer .footer-container .footer-social p,
     footer .footer-container .footer-description p,
@@ -1220,3 +1242,148 @@ footer {
   footer .footer-container .footer-links a {
     margin-left: 5px;
     margin-right: 5px; }
+
+.modal.show .modal-dialog {
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 45%;
+  position: absolute;
+  min-width: 60%; }
+
+@media only screen and (max-width: 768px) {
+  .modal.show .modal-dialog {
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    left: 48%;
+    top: 50%;
+    position: absolute;
+    min-width: 90%; }
+  .nuestros-proyectos {
+    position: absolute;
+    right: 8px; }
+  button.close.nuestros-proyectos {
+    padding-top: 10px;
+    font-size: 40px; } }
+
+.modal-body {
+  min-height: 90%;
+  text-align: center;
+  padding-top: 50px; }
+
+.nuestros-proyectos {
+  position: absolute;
+  right: 25px; }
+
+button.close {
+  padding-top: 12px;
+  font-size: 50px; }
+
+img.image-modal-proyectos {
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+  padding-bottom: 10px; }
+
+.ourprojects {
+  background: #E0F6F7;
+  font-family: 'Montserrat', sans-serif; }
+
+.ourprojects h2 {
+  font-family: 'Montserrat', sans-serif; }
+
+.moreProjects {
+  font-size: 60px;
+  color: black;
+  padding-top: 30px; }
+
+.single-product2 {
+  background: url(../img/bubbles.jpg);
+  background-size: cover; }
+
+.imagenp1:hover {
+  background-image: url(../img/c1.jpg); }
+
+.imagenp2:hover {
+  background-image: url(../img/c2.jpg); }
+
+.imagenp3:hover {
+  background-image: url(../img/c3.jpg); }
+
+.imagenp4:hover {
+  background-image: url(../img/c4.jpg); }
+
+.imagenp5:hover {
+  background-image: url(../img/c5.jpg); }
+
+.imagenp6:hover {
+  background-image: url(../img/c7.jpg); }
+
+.single-product2:hover {
+  /*background: url(../img/c1.jpg);*/
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1); }
+
+.single-product1 {
+  margin-top: 30px;
+  opacity: 0;
+  background: gray;
+  /*border-bottom: 2px solid #00ff8c;*/
+  padding: 70px 20px;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s; }
+
+.single-product1 .icon {
+  text-align: center;
+  margin-bottom: 0px; }
+
+.single-product1 .icon span {
+  font-size: 28px;
+  color: #00ff8c;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s; }
+
+.single-product1 .desc {
+  text-align: center; }
+
+.single-product1 .desc h4 {
+  margin-bottom: 10px;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  font-family: 'Montserrat', sans-serif; }
+
+.single-product1 .desc p {
+  margin-bottom: 10px;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  font-family: 'Montserrat', sans-serif; }
+
+.single-product1:hover {
+  opacity: .85;
+  -webkit-transition: opacity .5s;
+  -o-transition: opacity .5s;
+  transition: opacity .5s; }
+
+.single-product1:hover .icon span, .single-product1:hover .desc h4, .single-product1:hover .desc p {
+  color: #fff;
+  opacity: .85;
+  -webkit-transition: opacity .5s;
+  -o-transition: opacity .5s;
+  transition: opacity .5s; }
