RCU-WS-004-PR Changes

--- a/scss/theme/_variables.scss
+++ b/scss/theme/_variables.scss
@@ -11,3 +11,4 @@ $text-color     : #777777;
 $footer-bg      : #60605E;
 $white          : #FFFFFF;
 $black          : #000000;
+$ourproject-color: #E0F6F7;
