--- a/scss/theme/_home.scss
+++ b/scss/theme/_home.scss
@@ -1,10 +1,18 @@
 .banner-area {
 	background: url(../img/banner.jpg) no-repeat center center/cover;
 	.overlay-bg {
-		background: -moz-linear-gradient(left, rgba(60,64,143,.95) 0%, rgba(91,97,207,.95) 100%);
-		background: -webkit-linear-gradient(left, rgba(60,64,143,.95) 0%,rgba(91,97,207,.95) 100%);
-		background: linear-gradient(to right, rgba(60,64,143,.95) 0%,rgba(91,97,207,.95) 100%);
+		background: -moz-linear-gradient(left, rgba(15, 2, 138, 0) 0%, rgba(0, 0, 0, 0) 100%);
+		background: -webkit-linear-gradient(left, rgba(15, 2, 138, 0) 0%,rgba(0, 0, 0, 0) 100%);
+		background: linear-gradient(to right, rgba(15, 2, 138, 0) 0%,rgba(0, 0, 0, 0) 100%);
 	}
+}
+.text-center-main{
+	color: $white;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 1.5em;
+    position: relative; 
+
 }
 .signle-service {
 	margin-top: 30px;
