--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,3 +21,7 @@
 @import "theme/header";
 @import "theme/home";
 @import "theme/footer";
+
+//Parallax
+@import "theme/parallax";
+@import "theme/slide-parallax";
