--- a/scss/theme/_home.scss
+++ b/scss/theme/_home.scss
@@ -198,7 +198,7 @@
 			@include transition();
 			.social {
 				a {
-					color: rgba($white, .5);
+					color: rgba($white, 1);
 					margin: 0 4px;
 					padding: 2px;
 					font-size: 310% !important;
