Pull Request Fixes
Minor Fixes

--- a/scss/theme/_variables.scss
+++ b/scss/theme/_variables.scss
@@ -7,7 +7,7 @@ $primary-font	: 'Montserrat', sans-serif;
 
 $primary-color	: #00AEA5;
 $title-color	: #222222;
-$text-color		: #FFFFFF;
+$text-color		: #777777;
 $footer-bg      : #60605E;
 $white			: #FFFFFF;
 $black			: #000000;
