add the template

--- a/scss/theme/_variables.scss
+++ b/scss/theme/_variables.scss
@@ -11,6 +11,6 @@ $text-color		: #777777;
 $footer-bg      : #60605E;
 $white			: #FFFFFF;
 $black			: #000000;
-
+$input-background-color: #D6D6D6;
 
 
