--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@
   font-weight: 300; }
 
 body {
-  color: #FFFFFF;
+  color: #777777;
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
   font-weight: 300;
@@ -64,7 +64,7 @@ iframe {
 a, a:focus, a:hover {
   text-decoration: none;
   outline: 0;
-  color: #FFFFFF; }
+  color: #777777; }
 
 .btn.active.focus,
 .btn.active:focus,
@@ -614,7 +614,7 @@ td, th {
   .section-title h3 {
     font-weight: 300;
     font-size: 24px;
-    color: #FFFFFF; }
+    color: #777777; }
     .section-title h3 b {
       font-weight: 300;
       color: #222222; }
@@ -1156,30 +1156,39 @@ td, th {
     .single-publish .top h6 a {
       color: #222222; }
 
+.contact-us-line {
+  border: 2px solid #00AEA5;
+  margin-left: 30%;
+  margin-right: 30%;
+  border-radius: 5px; }
+
 .single-input input {
   width: 100%;
   line-height: 40px;
   padding: 0 20px;
-  background: #FFFFFF;
+  background: #D6D6D6;
   border: none; }
   .single-input input:focus {
     outline: none;
     border: 1px solid transparent;
     box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2); }
+  .single-input input::placeholder {
+    color: #FFFFFF; }
 
 .single-input textarea {
   width: 100%;
   line-height: 50px;
   padding: 0 20px;
-  height: 140px;
   resize: none;
   border: none;
-  background: #FFFFFF;
+  background: #D6D6D6;
   border: none; }
   .single-input textarea:focus {
     outline: none;
     border: 1px solid transparent;
     box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2); }
+  .single-input textarea::placeholder {
+    color: #FFFFFF; }
 
 .cta-area {
   background: #3d4191;
