--- a/scss/theme/_elements.scss
+++ b/scss/theme/_elements.scss
@@ -21,6 +21,11 @@
 		margin-right: 20px;
 		background: $white;
 	}
+	&.contact-btn {
+		color: $white;
+		margin-top: 60px;
+		background: $primary-color;
+	}
 	span {
 		margin-left: 15px;
 	}
