--- a/scss/theme/_slide-parallax.scss
+++ b/scss/theme/_slide-parallax.scss
@@ -1,21 +1,39 @@
 .slideshow-container {
     position: relative;
-    color: #FFFFFF;
+    color: $primary-color;
+    height: 20vh;
+}
+.slider-block-testimonial{
+  position: relative;
+  background-attachment: fixed;
+  background-size: cover; 
+  opacity: .9;
+  margin-bottom: 1em;
+  padding-top: 5%;
+}
+
+.pr-slider q{
+  color: $white;
+  font-family: $primary-font;
+  font-weight: 400;
+  font-size: 1.2em;
+  width: 50%;
+  display: inline-flex;
+}
+
+.pr-slider p{
+  color: $primary-color;
+  font-size: 1.1em;
+  font-weight: 400;
+}
+
+.pr-slider .bx-wrapper{
+  border: none 0px; 
+  background: none;
 }
   
-  /* Slides */
-  .mySlides {
-    display: none;
-    padding: 80px 0px 50px 0px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    text-align: center;
-    font-size: 1.3em;
-    width: 50%;
-  }
-  
   /* Next & previous buttons */
-  .prev, .next {
+  .bx-prev, .bx-next {
     cursor: pointer;
     position: absolute;
     top: 50%;
@@ -23,59 +41,37 @@
     margin-top: -30px;
     padding: 16px;
     font-weight: bold;
-    font-size: 20px;
-    border-radius: 0 ;
+    font-size: 10px;
+    border-radius: 0px;
     user-select: none;
-    background-color: #00AEA5;
+    background-color: $primary-color ;
     margin-left:  -35vw;
     margin-right: 15vw;
     }
   
   /* Position the "next button" to the right */
-  .next {
+  .bx-next {
     position: absolute;
     right: 0;
     border-radius: 3px 0 0 3px;
   }
   
   /* On hover, add a black background color with a little bit see-through */
-  .prev:hover, .next:hover {
-    background-color: #00AEA5 ;
+  .bx-prev:hover, .bx-next:hover {
+    background-color: $primary-color  ;
     opacity: 0.9;
   }
   
-  /* The dot/bullet/indicator container */
-  .dot-container {
-      text-align: center;
-      padding: 20px;
-      background:none;
-  }
-  
-  /* The dots/bullets/indicators */
-  .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #E0F6F7;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-  }
-  
-  /* Add a background color to the active dot/circle */
-  .active, .dot:hover {
-    background-color: #00AEA5;
-  }
-   
+ 
   @media (max-width: 800px){
-    .prev, .next {
+    .bx-prev, .bx-next {
       padding: 12px;
       font-size: 15px;
     }
+ 
   }
   @media (max-width: 500px){
-    .prev, .next {
+    .bx-prev, .bx-next {
       padding: 10px;
       font-size: 12px;
     }
