--- a/css/main.css
+++ b/css/main.css
@@ -607,7 +607,6 @@ td, th {
   .primary-btn:hover {
     background: #00AEA5;
     color: #FFFFFF;
-    -webkit-box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2);
     box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2); }
 
 .section-title {
@@ -701,7 +700,6 @@ td, th {
   .details-btn:hover {
     width: 140px;
     background: #00AEA5;
-    -webkit-box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2);
     box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2); }
     .details-btn:hover .details {
       margin-left: 0;
@@ -777,8 +775,6 @@ td, th {
 .is-sticky .sticky-header {
   background: -moz-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
   background: -webkit-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
-  background: -webkit-gradient(linear, left top, right top, from(rgba(60, 64, 143, 0.95)), to(rgba(91, 97, 207, 0.95)));
-  background: -o-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
   background: linear-gradient(to right, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%); }
 
 .search {
@@ -788,16 +784,12 @@ td, th {
   .search span {
     color: #FFFFFF; }
   .search:hover .search-field {
-    -webkit-transform: scaleY(1) !important;
-    -ms-transform: scaleY(1) !important;
     transform: scaleY(1) !important; }
   @media (max-width: 767px) {
     .search {
       margin-right: 60px; } }
 
 .search-field {
-  -webkit-transform: scaleY(0);
-  -ms-transform: scaleY(0);
   transform: scaleY(0);
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
@@ -807,8 +799,6 @@ td, th {
   top: -13px;
   right: -2px; }
   .search-field:hover {
-    -webkit-transform: scaleY(1) !important;
-    -ms-transform: scaleY(1) !important;
     transform: scaleY(1) !important; }
   .search-field input {
     line-height: 60px;
@@ -857,8 +847,6 @@ td, th {
   .banner-area .overlay-bg {
     background: -moz-linear-gradient(left, rgba(15, 2, 138, 0) 0%, rgba(0, 0, 0, 0) 100%);
     background: -webkit-linear-gradient(left, rgba(15, 2, 138, 0) 0%, rgba(0, 0, 0, 0) 100%);
-    background: -webkit-gradient(linear, left top, right top, from(rgba(15, 2, 138, 0)), to(rgba(0, 0, 0, 0)));
-    background: -o-linear-gradient(left, rgba(15, 2, 138, 0) 0%, rgba(0, 0, 0, 0) 100%);
     background: linear-gradient(to right, rgba(15, 2, 138, 0) 0%, rgba(0, 0, 0, 0) 100%); }
 
 .text-center-main {
@@ -891,7 +879,6 @@ td, th {
       display: none; } }
 
 .single-product {
-  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.42);
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.42);
   margin-top: 30px;
   background: #FFFFFF;
@@ -926,14 +913,10 @@ td, th {
       transition: all 0.3s ease 0s; }
   .single-product:hover {
     border-color: #FFFFFF;
-    background-image: -webkit-gradient(linear, left top, right top, from(#00AEA5), to(rgba(0, 174, 165, 0.5)));
-    background-image: -webkit-linear-gradient(left, #00AEA5, rgba(0, 174, 165, 0.5));
-    background-image: -o-linear-gradient(left, #00AEA5, rgba(0, 174, 165, 0.5));
     background-image: linear-gradient(to right, #00AEA5, rgba(0, 174, 165, 0.5)); }
     .single-product:hover .icon span, .single-product:hover .desc h4, .single-product:hover .desc p, .single-product:hover .desc a {
       color: #FFFFFF; }
     .single-product:hover img {
-      -webkit-filter: brightness(0) invert(1);
       filter: brightness(0) invert(1); }
 
 .controls .filter {
@@ -953,8 +936,6 @@ td, th {
   .single-filter-content .overlay-bg-content {
     background: -moz-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
     background: -webkit-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
-    background: -webkit-gradient(linear, left top, right top, from(rgba(60, 64, 143, 0.95)), to(rgba(91, 97, 207, 0.95)));
-    background: -o-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
     background: linear-gradient(to right, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
     text-align: center;
     padding: 50px 100px;
@@ -992,8 +973,6 @@ td, th {
 .effect:hover {
   background: -moz-linear-gradient(left, rgba(0, 174, 165, 0.5) 0%, rgba(0, 174, 165, 0.5) 100%);
   background: -webkit-linear-gradient(left, rgba(0, 174, 165, 0.5) 0%, rgba(0, 174, 165, 0.5) 100%);
-  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 174, 165, 0.5)), to(rgba(0, 174, 165, 0.5)));
-  background: -o-linear-gradient(left, rgba(0, 174, 165, 0.5) 0%, rgba(0, 174, 165, 0.5) 100%);
   background: linear-gradient(to right, rgba(0, 174, 165, 0.5) 0%, rgba(0, 174, 165, 0.5) 100%);
   color: #00AEA5 !important; }
 
@@ -1013,8 +992,6 @@ td, th {
     .single-member .thumb .overlay-member {
       background: -moz-linear-gradient(left, rgba(0, 174, 165, 0.8) 0%, rgba(0, 174, 165, 0.8) 100%);
       background: -webkit-linear-gradient(left, rgba(0, 174, 165, 0.8) 0%, rgba(0, 174, 165, 0.8) 100%);
-      background: -webkit-gradient(linear, left top, right top, from(rgba(0, 174, 165, 0.8)), to(rgba(0, 174, 165, 0.8)));
-      background: -o-linear-gradient(left, rgba(0, 174, 165, 0.8) 0%, rgba(0, 174, 165, 0.8) 100%);
       background: linear-gradient(to right, rgba(0, 174, 165, 0.8) 0%, rgba(0, 174, 165, 0.8) 100%);
       text-align: center;
       padding: 30px;
@@ -1046,7 +1023,6 @@ td, th {
           color: #00AEA5;
           color: white;
           -webkit-transform: scale(1.5);
-          -ms-transform: scale(1.5);
           transform: scale(1.5); }
     .single-member .thumb:hover .overlay-member {
       opacity: 1; }
@@ -1189,7 +1165,6 @@ td, th {
   .single-input input:focus {
     outline: none;
     border: 1px solid transparent;
-    -webkit-box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2);
     box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2); }
 
 .single-input textarea {
@@ -1204,7 +1179,6 @@ td, th {
   .single-input textarea:focus {
     outline: none;
     border: 1px solid transparent;
-    -webkit-box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2);
     box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2); }
 
 .cta-area {
@@ -1271,11 +1245,7 @@ footer {
   footer .footer-container .footer-description,
   footer .footer-container .footer-links,
   footer .footer-container .footer-icon {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center; }
     footer .footer-container .footer-social p,
     footer .footer-container .footer-description p,
@@ -1302,9 +1272,102 @@ footer {
     margin-left: 5px;
     margin-right: 5px; }
 
+.site-block-testimonial {
+  position: relative;
+  background-attachment: fixed;
+  background-size: cover;
+  opacity: .9;
+  margin-bottom: 1em; }
+
+.list-item-parallax {
+  height: 100px;
+  width: 150px;
+  margin-bottom: 0px; }
+
+.text-parallax {
+  font-size: 1.2em;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  color: #FFFFFF; }
+
+.span-parallax {
+  color: #FFFFFF;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600; }
+
+.img-parallax {
+  width: 30%;
+  margin-top: 2em;
+  margin-bottom: -2.5em; }
+
+.slideshow-container {
+  position: relative;
+  color: #00AEA5;
+  height: 20vh; }
+
+.slider-block-testimonial {
+  position: relative;
+  background-attachment: fixed;
+  background-size: cover;
+  opacity: .9;
+  margin-bottom: 1em;
+  padding-top: 5%; }
+
+.pr-slider q {
+  color: #FFFFFF;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 1.2em;
+  width: 50%;
+  display: inline-flex; }
+
+.pr-slider p {
+  color: #00AEA5;
+  font-size: 1.1em;
+  font-weight: 400; }
+
+.pr-slider .bx-wrapper {
+  border: none 0px;
+  background: none; }
+
+/* Next & previous buttons */
+.bx-prev, .bx-next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -30px;
+  padding: 16px;
+  font-weight: bold;
+  font-size: 10px;
+  border-radius: 0px;
+  user-select: none;
+  background-color: #00AEA5;
+  margin-left: -35vw;
+  margin-right: 15vw; }
+
+/* Position the "next button" to the right */
+.bx-next {
+  position: absolute;
+  right: 0;
+  border-radius: 3px 0 0 3px; }
+
+/* On hover, add a black background color with a little bit see-through */
+.bx-prev:hover, .bx-next:hover {
+  background-color: #00AEA5;
+  opacity: 0.9; }
+
+@media (max-width: 800px) {
+  .bx-prev, .bx-next {
+    padding: 12px;
+    font-size: 15px; } }
+
+@media (max-width: 500px) {
+  .bx-prev, .bx-next {
+    padding: 10px;
+    font-size: 12px; } }
+
 .modal.show .modal-dialog {
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   left: 50%;
   top: 45%;
@@ -1313,8 +1376,6 @@ footer {
 
 @media only screen and (max-width: 767px) {
   .modal.show .modal-dialog {
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     left: 50%;
     top: 50%;
@@ -1329,8 +1390,6 @@ footer {
 
 @media only screen and (max-width: 575px) {
   .modal.show .modal-dialog {
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     left: 48%;
     top: 50%;
@@ -1393,11 +1452,7 @@ img.image-modal-proyectos {
 .single-product2:hover {
   background-repeat: no-repeat;
   background-position: center center;
-  -webkit-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
-  -webkit-transform: scale(1.1);
-  -ms-transform: scale(1.1);
   transform: scale(1.1); }
 
 .single-product1 {
@@ -1405,8 +1460,6 @@ img.image-modal-proyectos {
   opacity: 0;
   background: gray;
   padding: 70px 20px;
-  -webkit-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s; }
 
 .single-product1 .icon {
@@ -1416,8 +1469,6 @@ img.image-modal-proyectos {
 .single-product1 .icon span {
   font-size: 28px;
   color: #FFFFFF;
-  -webkit-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s; }
 
 .single-product1 .desc {
@@ -1426,20 +1477,14 @@ img.image-modal-proyectos {
 .single-product1 .desc h4 {
   color: #FFFFFF;
   margin-bottom: 10px;
-  -webkit-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s; }
 
 .single-product1 .desc p {
   color: #FFFFFF;
   margin-bottom: 10px;
-  -webkit-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s; }
 
 .single-product1:hover {
   opacity: .85;
-  -webkit-transition: opacity .5s;
-  -o-transition: opacity .5s;
   transition: opacity .5s;
   color: #FFFFFF; }
