--- a/css/main.css
+++ b/css/main.css
@@ -36,8 +36,8 @@
 body {
   color: #777777;
   font-family: "Montserrat", sans-serif;
-  font-size: 14px;
-  font-weight: 300;
+  font-size: 16px;
+  font-weight: 500;
   line-height: 1.5em;
   position: relative; }
 
@@ -582,10 +582,12 @@ td, th {
 .primary-btn {
   line-height: 40px;
   padding: 0 40px;
+  border-radius: 20px;
+  background: transparent;
   border: 1px solid #00AEA5;
   color: #222222;
   display: inline-block;
-  font-weight: 800;
+  font-weight: 600;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
@@ -595,13 +597,7 @@ td, th {
     outline: none; }
   .primary-btn.banner-btn {
     color: #FFFFFF;
-    margin-top: 60px;
-    background: #00AEA5; }
-  .primary-btn.banner-btn-b {
-    color: #000000;
-    margin-top: 60px;
-    margin-right: 20px;
-    background: #FFFFFF; }
+    margin-top: 60px; }
   .primary-btn span {
     margin-left: 15px; }
   .primary-btn:hover {
@@ -709,6 +705,12 @@ td, th {
     .details-btn:hover span {
       color: #FFFFFF;
       font-weight: 600; }
+
+.slider-container {
+  padding-top: 100px;
+  padding-bottom: 10px; }
+  .slider-container .section-slider-title {
+    margin-bottom: 20px; }
 
 .default-header {
   position: absolute;
@@ -1251,6 +1253,7 @@ footer {
     footer .footer-container .footer-description p,
     footer .footer-container .footer-links p,
     footer .footer-container .footer-icon p {
+      color: #FFFFFF;
       margin-bottom: 0; }
     footer .footer-container .footer-social a,
     footer .footer-container .footer-description a,
@@ -1331,7 +1334,7 @@ footer {
   background: none; }
 
 /* Next & previous buttons */
-.bx-prev, .bx-next {
+.example2 .bx-prev, .example2 .bx-next {
   cursor: pointer;
   position: absolute;
   top: 50%;
