--- a/scss/css/main.css
+++ b/scss/css/main.css
@@ -607,7 +607,6 @@ td, th {
   .primary-btn:hover {
     background: #00AEA5;
     color: #FFFFFF;
-    -webkit-box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2);
     box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2); }
 
 .section-title {
@@ -701,7 +700,6 @@ td, th {
   .details-btn:hover {
     width: 140px;
     background: #00AEA5;
-    -webkit-box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2);
     box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2); }
     .details-btn:hover .details {
       margin-left: 0;
@@ -717,314 +715,132 @@ td, th {
   top: 0;
   left: 0;
   width: 100%;
-  max-height: 70%;
-  z-index: 1000;
-  -webkit-transition: 0.3s;
-  -o-transition: 0.3s;
-  transition: 0.3s; }
+  z-index: 9; }
+  .default-header .right-bar {
+    position: relative; }
+  .default-header nav .main-menu {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    align-items: center; }
+    @media (max-width: 767px) {
+      .default-header nav .main-menu {
+        display: none; } }
+    .default-header nav .main-menu a {
+      display: inline-block;
+      color: rgba(255, 255, 255, 0.5);
+      margin: 0 20px;
+      text-transform: uppercase;
+      font-size: 12px; }
+      @media (max-width: 991px) {
+        .default-header nav .main-menu a {
+          margin: 0 5px; } }
+      .default-header nav .main-menu a:hover {
+        color: #00AEA5; }
+  .default-header nav .mobile-btn {
+    display: none;
+    font-size: 36px;
+    color: rgba(255, 255, 255, 0.5); }
+  @media (max-width: 767px) {
+    .default-header .main-menu {
+      -webkit-box-direction: normal;
+      -webkit-box-orient: vertical;
+      -webkit-flex-direction: column;
+      -moz-flex-direction: column;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      position: absolute;
+      top: 40px;
+      right: 0;
+      background: #4a4fad;
+      padding: 30px 20px; }
+      .default-header .main-menu a {
+        margin: 5px 20px !important; }
+    .default-header .mobile-btn {
+      display: block !important;
+      font-size: 36px !important;
+      position: absolute;
+      top: 0;
+      right: 0; } }
 
-.btnlink {
-  background: none;
-  border-style: none;
-  color: #FFFFFF;
-  font-size: 1.15em;
-  margin: 0;
-  padding: 0; }
+.sticky-header {
+  padding: 15px 0; }
 
-.btnlink:hover {
-  color: #00AEA5 !important;
-  text-decoration: underline; }
+.is-sticky .sticky-header {
+  background: -moz-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
+  background: -webkit-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
+  background: linear-gradient(to right, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%); }
 
-.dropdown-menu {
-  background: #00AEA5 !important; }
-
-.dropdown-menu li a:hover {
-  background-color: #00AEA5;
-  font-weight: 600;
-  text-decoration: underline; }
-
-.dropdown-toggle {
-  visibility: visible; }
-
-.ham {
-  visibility: hidden; }
-
-.iconNav {
-  margin-top: -0.25em; }
-
-.menu {
-  background-color: #2E2D2C; }
-
-#menu {
-  margin-top: 0.7em; }
-
-.nav-link:hover {
-  color: #00AEA5 !important;
-  text-decoration: underline; }
-
-.link7:hover dropdown-menu {
-  visibility: visible; }
-
-.standard-menu ul li {
-  display: inline-block;
-  padding: 0 0 0 0;
-  /*1em*/
-  line-height: .5em; }
-
-.standard-menu ul li a {
-  font-family: 'Montserrat';
-  color: #FFFFFF;
-  font-size: 1.15em; }
-
-.submenu {
-  color: #FFFFFF !important; }
-
-/*For mobile menu*/
-.main-menu {
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  visibility: hidden; }
-
-.nav-open .main-menu {
-  opacity: 1;
-  visibility: visible;
-  background: #FFFFFF;
-  max-height: 100% !important;
-  text-align: center; }
-
-.main-menu .nav li a {
-  color: #2E2D2C;
-  font-size: 3vh;
-  font-weight: 400;
-  font-family: 'Montserrat'; }
-
-.main-menu .nav li a:hover {
-  color: #00AEA5;
-  font-size: 3vh;
-  font-weight: 400;
-  font-family: 'Montserrat'; }
-
-.main-menu .nav li {
-  opacity: 0;
-  -webkit-transform: translateY(-40px);
-  -ms-transform: translateY(-40px);
-  transform: translateY(-40px);
-  -webkit-animation-timing-function: cubic-bezier(0.45, 0.005, 0, 1);
-  -moz-animation-timing-function: cubic-bezier(0.45, 0.005, 0, 1);
-  -o-animation-timing-function: cubic-bezier(0.45, 0.005, 0, 1);
-  animation-timing-function: cubic-bezier(0.45, 0.005, 0, 1); }
-
-.nav-open .main-menu .nav li {
-  opacity: 1;
-  -webkit-transform: translateY(0px);
-  -ms-transform: translateY(0px);
-  transform: translateY(0px);
-  -webkit-transition: -webkit-transform .2s,opacity .2s;
-  -webkit-transition: opacity .2s,-webkit-transform .2s;
-  transition: opacity .2s,-webkit-transform .2s;
-  -o-transition: transform .2s,opacity .2s;
-  transition: transform .2s,opacity .2s;
-  transition: transform .2s,opacity .2s,-webkit-transform .2s; }
-
-.main-menu .nav li.delay-1 {
-  -webkit-transition-delay: 0.1s;
-  -moz-transition-delay: 0.1s;
-  -ms-transition-delay: 0.1s;
-  -o-transition-delay: 0.1s;
-  transition-delay: 0.1s; }
-
-.main-menu .nav li.delay-2 {
-  -webkit-transition-delay: 0.2s;
-  -moz-transition-delay: 0.2s;
-  -ms-transition-delay: 0.2s;
-  -o-transition-delay: 0.2s;
-  transition-delay: 0.2s; }
-
-.main-menu .nav li.delay-3 {
-  -webkit-transition-delay: 0.3s;
-  -moz-transition-delay: 0.3s;
-  -ms-transition-delay: 0.3s;
-  -o-transition-delay: 0.3s;
-  transition-delay: 0.3s; }
-
-.main-menu .nav li.delay-4 {
-  -webkit-transition-delay: 0.4s;
-  -moz-transition-delay: 0.4s;
-  -ms-transition-delay: 0.4s;
-  -o-transition-delay: 0.4s;
-  transition-delay: 0.4s; }
-
-.main-menu .nav li.delay-5 {
-  -webkit-transition-delay: 0.5s;
-  -moz-transition-delay: 0.5s;
-  -ms-transition-delay: 0.5s;
-  -o-transition-delay: 0.5s;
-  transition-delay: 0.5s; }
-
-.main-menu .nav li.delay-6 {
-  -webkit-transition-delay: 0.6s;
-  -moz-transition-delay: 0.6s;
-  -ms-transition-delay: 0.6s;
-  -o-transition-delay: 0.6s;
-  transition-delay: 0.6s; }
-
-.main-menu .nav li.delay-7 {
-  -webkit-transition-delay: 0.7s;
-  -moz-transition-delay: 0.7s;
-  -ms-transition-delay: 0.7s;
-  -o-transition-delay: 0.7s;
-  transition-delay: 0.7s; }
-
-.main-menu .nav li.delay-8 {
-  -webkit-transition-delay: 0.8s;
-  -moz-transition-delay: 0.8s;
-  -ms-transition-delay: 0.8s;
-  -o-transition-delay: 0.8s;
-  transition-delay: 0.8s; }
-
-.main-menu .nav li.delay-9 {
-  -webkit-transition-delay: 0.9s;
-  -moz-transition-delay: 0.9s;
-  -ms-transition-delay: 0.9s;
-  -o-transition-delay: 0.9s;
-  transition-delay: 0.9s; }
-
-.nav-button {
-  position: relative;
-  z-index: 1111;
-  height: 42px;
-  display: block;
-  width: 50px;
-  padding: 12px; }
-
-.nav-button #nav-icon3 {
-  width: 24px;
-  height: 22px;
-  display: inline-block;
-  position: relative;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
+.search {
+  padding: 6px 20px;
+  border-right: 1px solid rgba(255, 255, 255, 0.5);
   cursor: pointer; }
+  .search span {
+    color: #FFFFFF; }
+  .search:hover .search-field {
+    transform: scaleY(1) !important; }
+  @media (max-width: 767px) {
+    .search {
+      margin-right: 60px; } }
 
-.nav-button #nav-icon3 span {
-  display: block;
+.search-field {
+  transform: scaleY(0);
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
   position: absolute;
-  height: 3px;
-  width: 100%;
-  background: #00AEA5;
-  border-radius: 5px;
-  opacity: 1;
-  left: 0;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out; }
-
-.nav-button #nav-icon3 span:nth-child(1) {
-  top: 0; }
-
-.nav-button #nav-icon3 span:nth-child(2), #nav-icon3 span:nth-child(3) {
-  top: 7px; }
-
-.nav-button #nav-icon3 span:nth-child(4) {
-  top: 14px; }
-
-.nav-open #nav-icon3 span:nth-child(1) {
-  top: 9px;
-  width: 0;
-  left: 50%; }
-
-.nav-open #nav-icon3 span:nth-child(2) {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg); }
-
-.nav-open #nav-icon3 span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg); }
-
-.nav-open #nav-icon3 span:nth-child(4) {
-  top: 9px;
-  width: 0;
-  left: 50%; }
-
-.flex-center {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  height: 100%; }
-
-/*-- Responsive---------------------------------------------------------------- --*/
-@media screen and (max-width: 1200px) {
-  .standard-menu ul li {
-    padding: 0 0 0 0.05em; }
-  .btnlink {
-    font-size: 0.9em; }
-  .ham {
-    visibility: hidden;
-    padding: 0px !important;
-    margin: 0px !important; } }
-
-@media screen and (max-width: 1000px) {
-  .standard-menu ul li a {
-    font-family: 'Montserrat';
+  top: -13px;
+  right: -2px; }
+  .search-field:hover {
+    transform: scaleY(1) !important; }
+  .search-field input {
+    line-height: 60px;
+    background: #4a4fad;
+    width: 600px;
+    border: none;
     color: #FFFFFF;
-    font-size: 0.85em;
-    margin: 0; }
-  .ham {
-    visibility: hidden;
-    padding: 0px !important;
-    margin: 0px !important; }
-  .btnlink {
-    visibility: visible; } }
+    padding: 0 70px 0 25px;
+    font-weight: 400; }
+    @media (max-width: 991px) {
+      .search-field input {
+        width: 400px; } }
+    @media (max-width: 767px) {
+      .search-field input {
+        width: 300px; } }
+    @media (max-width: 575px) {
+      .search-field input {
+        width: 200px; } }
+  .search-field .search-submit {
+    width: 60px;
+    height: 60px;
+    border: none;
+    background: transparent;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: 0; }
+    .search-field .search-submit span {
+      color: #FFFFFF; }
 
-@media screen and (max-width: 990px) {
-  .standard-menu ul li a {
-    font-family: 'Montserrat';
-    color: #FFFFFF;
-    font-size: 0em;
-    padding-left: 0.1em;
-    margin: 0;
-    visibility: hidden; }
-  .ham {
-    visibility: visible;
-    margin-top: 0em; }
-  .dropdown-toggle {
-    visibility: hidden; } }
-
-@media screen and (max-width: 490px) {
-  .standard-menu ul li a {
-    padding-left: 0px;
-    visibility: hidden; }
-  .nav-link {
-    padding: 0px !important; } }
+.header-social {
+  margin-left: 20px; }
+  @media (max-width: 767px) {
+    .header-social {
+      display: none !important; } }
+  .header-social a {
+    margin: 0 5px;
+    padding: 0 5px;
+    display: inline-block;
+    color: rgba(255, 255, 255, 0.5); }
+    .header-social a:hover {
+      color: #00AEA5; }
 
 .banner-area {
   background: url(../img/banner.jpg) no-repeat center center/cover; }
@@ -1120,8 +936,6 @@ td, th {
   .single-filter-content .overlay-bg-content {
     background: -moz-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
     background: -webkit-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
-    background: -webkit-gradient(linear, left top, right top, from(rgba(60, 64, 143, 0.95)), to(rgba(91, 97, 207, 0.95)));
-    background: -o-linear-gradient(left, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
     background: linear-gradient(to right, rgba(60, 64, 143, 0.95) 0%, rgba(91, 97, 207, 0.95) 100%);
     text-align: center;
     padding: 50px 100px;
@@ -1351,7 +1165,6 @@ td, th {
   .single-input input:focus {
     outline: none;
     border: 1px solid transparent;
-    -webkit-box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2);
     box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2); }
 
 .single-input textarea {
@@ -1366,7 +1179,6 @@ td, th {
   .single-input textarea:focus {
     outline: none;
     border: 1px solid transparent;
-    -webkit-box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2);
     box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2); }
 
 .cta-area {
@@ -1433,11 +1245,7 @@ footer {
   footer .footer-container .footer-description,
   footer .footer-container .footer-links,
   footer .footer-container .footer-icon {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center; }
     footer .footer-container .footer-social p,
     footer .footer-container .footer-description p,
@@ -1463,220 +1271,3 @@ footer {
   footer .footer-container .footer-links a {
     margin-left: 5px;
     margin-right: 5px; }
-
-.site-block-testimonial {
-  position: relative;
-  background-attachment: fixed;
-  background-size: cover;
-  opacity: .9;
-  margin-bottom: 1em; }
-
-.list-item-parallax {
-  height: 100px;
-  width: 150px;
-  margin-bottom: 0px; }
-
-.text-parallax {
-  font-size: 1.2em;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-  color: #FFFFFF; }
-
-.span-parallax {
-  color: #FFFFFF;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 600; }
-
-.img-parallax {
-  width: 30%;
-  margin-top: 2em;
-  margin-bottom: -2.5em; }
-
-.slideshow-container {
-  position: relative;
-  color: #00AEA5;
-  height: 20vh; }
-
-.slider-block-testimonial {
-  position: relative;
-  background-attachment: fixed;
-  background-size: cover;
-  opacity: .9;
-  margin-bottom: 1em;
-  padding-top: 5%; }
-
-.pr-slider q {
-  color: #FFFFFF;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-  font-size: 1.2em;
-  width: 50%;
-  display: inline-flex; }
-
-.pr-slider p {
-  color: #00AEA5;
-  font-size: 1.1em;
-  font-weight: 400; }
-
-.pr-slider .bx-wrapper {
-  border: none 0px;
-  background: none; }
-
-/* Next & previous buttons */
-.bx-prev, .bx-next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -30px;
-  padding: 16px;
-  font-weight: bold;
-  font-size: 10px;
-  border-radius: 0px;
-  user-select: none;
-  background-color: #00AEA5;
-  margin-left: -35vw;
-  margin-right: 15vw; }
-
-/* Position the "next button" to the right */
-.bx-next {
-  position: absolute;
-  right: 0;
-  border-radius: 3px 0 0 3px; }
-
-/* On hover, add a black background color with a little bit see-through */
-.bx-prev:hover, .bx-next:hover {
-  background-color: #00AEA5;
-  opacity: 0.9; }
-
-@media (max-width: 800px) {
-  .bx-prev, .bx-next {
-    padding: 12px;
-    font-size: 15px; } }
-
-@media (max-width: 500px) {
-  .bx-prev, .bx-next {
-    padding: 10px;
-    font-size: 12px; } }
-
-.modal.show .modal-dialog {
-  transform: translate(-50%, -50%);
-  left: 50%;
-  top: 45%;
-  position: absolute;
-  min-width: 60%; }
-
-@media only screen and (max-width: 767px) {
-  .modal.show .modal-dialog {
-    transform: translate(-50%, -50%);
-    left: 50%;
-    top: 50%;
-    position: absolute;
-    min-width: 90%; }
-  .nuestros-proyectos {
-    position: absolute;
-    right: 8px; }
-  button.close.nuestros-proyectos {
-    padding-top: 10px;
-    font-size: 40px; } }
-
-@media only screen and (max-width: 575px) {
-  .modal.show .modal-dialog {
-    transform: translate(-50%, -50%);
-    left: 48%;
-    top: 50%;
-    position: absolute;
-    min-width: 90%; } }
-
-.modal-body {
-  color: #000000;
-  text-align: center;
-  padding-top: 50px; }
-
-.nuestros-proyectos {
-  position: absolute;
-  right: 25px; }
-
-button.close {
-  padding-top: 12px;
-  font-size: 50px; }
-
-img.image-modal-proyectos {
-  height: auto;
-  max-width: 100%;
-  max-height: 100%;
-  padding-bottom: 10px; }
-
-.ourprojects {
-  background: #E0F6F7; }
-
-.moreProjects {
-  font-size: 60px;
-  color: #000000;
-  padding-top: 30px; }
-
-.single-product2 {
-  background: url(../img/bubbles.jpg);
-  background-size: cover; }
-
-/*Mixin code for avoid repetitive CSS code
-  The Each Loop iterate each value of the variable $listImages that contain the URL values of the images
-  The $i variable increments its value to know with imagep1-6 is going to applicate the CSS value*/
-.imagenp1:hover {
-  background-image: url(../img/c1.jpg); }
-
-.imagenp2:hover {
-  background-image: url(../img/c2.jpg); }
-
-.imagenp3:hover {
-  background-image: url(../img/c3.jpg); }
-
-.imagenp4:hover {
-  background-image: url(../img/c4.jpg); }
-
-.imagenp5:hover {
-  background-image: url(../img/c5.jpg); }
-
-.imagenp6:hover {
-  background-image: url(../img/c7.jpg); }
-
-/*End of Mixin Code*/
-.single-product2:hover {
-  background-repeat: no-repeat;
-  background-position: center center;
-  transition: all 0.3s ease 0s;
-  transform: scale(1.1); }
-
-.single-product1 {
-  margin-top: 30px;
-  opacity: 0;
-  background: gray;
-  padding: 70px 20px;
-  transition: all 0.3s ease 0s; }
-
-.single-product1 .icon {
-  text-align: center;
-  margin-bottom: 0px; }
-
-.single-product1 .icon span {
-  font-size: 28px;
-  color: #FFFFFF;
-  transition: all 0.3s ease 0s; }
-
-.single-product1 .desc {
-  text-align: center; }
-
-.single-product1 .desc h4 {
-  color: #FFFFFF;
-  margin-bottom: 10px;
-  transition: all 0.3s ease 0s; }
-
-.single-product1 .desc p {
-  color: #FFFFFF;
-  margin-bottom: 10px;
-  transition: all 0.3s ease 0s; }
-
-.single-product1:hover {
-  opacity: .85;
-  transition: opacity .5s;
-  color: #FFFFFF; }
